   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
        - Added Simple extension to the jee edition.
          Reported by Dustin Jenkins.
        - Fixed bug detected in the CharacterSet class when running in 
          the MacOS context. Reported by John Logsdon.
        - Removed the TaskService from the GAE edition as we are not
          allowed to create threads. Reported by Olivier Bruchez.
        - Fixed pom dependencies groupId. Reported by Rémi Dewitte.
        - Fixed potential bug with RangeInputStream causing 100% CPU 
          utilization with java NIO.
          Reported and contributed by Tal Liron. 
     - Enhancements
        - Added support of the "xml:base" attibute when parsing Atom 
          Publishing documents.
        - Updated Grizzly to version 1.9.17.
        - Updated FileUpload to version 1.2.1.
        - Updated JavaMail to version 1.4.2.
        - Updated JAXB RI to version 2.1.12.
        - Updated JSON library to version from 2009/08/16.
        - Updated Lucene to version 2.4.1.
        - Updated Tika to version 0.4.
        - Updated OAuth library to version from 2009/06/17.
        - Updated Velocity to version 1.6.2.
        - Updated JiBX to version 1.2.1.
        - Updated db4o to version 7.10.96.
        - Updated the Javadocs of the API to indicate the mapping 
          between properties/classes and HTTP headers.
        - Updated the "Server" HTTP header returned by default to 
          "Restlet-Framework/xxx"
        - The thread pool of Jetty servers can now be configured
          with Spring. Reported by Evgeny Shepelyuk. 
          
- 2.0 Milestone 4 (2009-08-06)
    - Bugs fixed
        - Improved support for the RFC 3339 date format which was 
          limited due to SimpleDateFormat. Added InternetDateFormat.
          Based on a contribution from Frank Hellwig.
        - Fixed bug in date format generated by Atom feeds.